# binary-tree-sum

./: CMakeLists.txt  README.md
core/: CMakeLists.txt  pthread_args.h  sum.cpp  sum.h  tree_node.cpp  tree_node.h  utils.cpp  utils.h
openmp/: CMakeLists.txt  main.cpp
pthread/: CMakeLists.txt  main.cpp
sequential/: CMakeLists.txt  main.cpp
simple/: main.cpp  tree_node.cpp  tree_node.h  utils.cpp  utils.h
test/: CMakeLists.txt  main.cpp
